add pointer printing

--- a/patcher/Makefile
+++ b/patcher/Makefile
@@ -6,7 +6,7 @@ WARNS := -Wall -Wextra -Wdouble-promotion -Wduplicate-decl-specifier -Wformat=2 
 OBJECTS := $(patsubst %.c,%.o,$(patsubst %.cpp,%.o,$(SOURCES)))
 DEPENDS := $(patsubst %.c,%.d,$(patsubst %.cpp,%.d,$(SOURCES)))
 
-override CFLAGS += -O3 -flto -Werror -std=c2x -isystem /usr/include/freetype2
+override CFLAGS += -O3 -flto -Werror -std=c2x
 CXXFLAGS = $(CFLAGS) -fno-exceptions -std=c++2a
 
 .PHONY: build run clean
